--- a/netlify.toml
+++ b/netlify.toml
@@ -85,3 +85,8 @@
   from = "/privacy"
   to = "/privacy.html"
   status = 200
+
+[[redirects]]
+  from = "/thank-you"
+  to = "/thank-you.html"
+  status = 200
